--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Fredoka+One&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Coding Quiz</title>
 </head>
 <body>
+  <header>
     <h1>Coding Quiz</h1>
+  </header>
+  <section id="contentBox">
     <p id="content">Welcome to the Coding Quiz. Click on the answer you think is correct. Please consider that if you have an error, the timer will decrease by 10 seconds</p>
     <p id="timer"></p>
+
     <h2 id="question"></h2>
     <button id="answer1"></button>
     <button id="answer2"></button>
     <button id="answer3"></button>
     <button id="answer4"></button>
     <button id="start">Start</button>
+    <p id="feedback"></p>
+
+    <section id="scores">
+      <p id="initialsText"></p>
+      <input type="text" id="initials" placeholder="Initials">
+      <button id="submit">Sumbit</button>
+    </section>
+
+  </section>
+
 
     <script src="./assets/script.js"></script>
 </body>
