Fixed local storage error, now lists are actually loading onto the screen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <button id="submit">Sumbit</button>
     </section>
 
+    <section id="highscores">
+      <ul id="highscoresList"></ul>
+    </section>
+
   </section>
 
 
