Clear highscores button wasn't working, fixed the error and is now clearing local storage correctly

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
     </section>
 
     <section id="highscores">
+      <h1>Highscores</h1>
       <ul id="highscoresList"></ul>
+      <button id="playAgain">Play again</button>
+      <button id="clear">Clear highscores</button>
     </section>
+
 
   </section>
 
