Added button view highscore and its functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Coding Quiz</h1>
   </header>
   <section id="contentBox">
+    <button id="hsButton">View Highscores</button>
     <p id="content">Welcome to the Coding Quiz. Click on the answer you think is correct. Please consider that if you have an error, the timer will decrease by 10 seconds</p>
     <p id="timer"></p>
 
