--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- HTML file of the proyect-->
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,14 +11,18 @@
     <title>Coding Quiz</title>
 </head>
 <body>
+  <!-- Section dedicated to the header of the page-->
   <header>
     <h1>Coding Quiz</h1>
   </header>
+  <!--Section that wraps all of the content of the page and the quiz-->
   <section id="contentBox">
+    <!-- Section that includes only a header, the title and the timer which basically has no added functionality-->
     <button id="hsButton">View Highscores</button>
     <p id="content">Welcome to the Coding Quiz. Click on the answer you think is correct. Please consider that if you have an error, the timer will decrease by 10 seconds</p>
     <p id="timer"></p>
-
+    
+    <!-- Section that wrapps the questions and the option buttons with the answers-->
     <h2 id="question"></h2>
     <button id="answer1"></button>
     <button id="answer2"></button>
@@ -26,12 +31,14 @@
     <button id="start">Start</button>
     <p id="feedback"></p>
 
+    <!-- Section to be able to enter the scores -->
     <section id="scores">
       <p id="initialsText"></p>
       <input type="text" id="initials" placeholder="Initials">
       <button id="submit">Sumbit</button>
     </section>
 
+    <!-- Section dedicated to the displaying of every highscore saved-->
     <section id="highscores">
       <h1>Highscores</h1>
       <ul id="highscoresList"></ul>
